--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                      <br><br>
                      <small> Dont have an account yet?</small>
                      <br><br>
-                     <a href="signup.html"> <button type="button" class="blue">  create an account</button></a>
+                     <a href="signup.html"> <button style="background-color: red; width: 200px;">  create an account</button></a>
                         <br><br>
                      <h4> Forgot your Password?</h4>
                      <small>click <a href="forgotpass.html"> <input  id="val"  type="button" value="here"> </a>a to reset<br/>
